# poly-bot

./: .gitignore  Cargo.toml  README.md  aa.dot  compile.sh  create_script.sql  package-lock.json  package.json  poly-bot.code-workspace  polybot.sql  run.sh  run_test_server.cmd  run_test_server.sh  test.dot  testdata.json  tsconfig.json
bot/: Cargo.toml
bot/src/: discord_response.rs  handler.rs  main.rs  serenity_command_context.rs
config/: Cargo.toml
config/src/: lib.rs
end_to_end_test/: Gemfile  database.rb  secret.rb
end_to_end_test/tests/: help_spec.rb
integration_test/: .rubocop.yml  Gemfile  discord.rb  test.rb
integration_test/tests/: add_user_spec.rb  help_spec.rb
lib/: wasmlib.d.ts  wasmlib.js  wasmlib_bg.d.ts  wasmlib_bg.wasm
lib/wasmlib/: wasmlib.d.ts  wasmlib.js  wasmlib_bg.d.ts  wasmlib_bg.wasm
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 0.sql  1.sql  2.sql  3.sql  4.sql  5.sql
model/: Cargo.toml
model/src/: relationship.rs  relationship_type.rs  user.rs
poly_bot_core/: Cargo.toml
poly_bot_core/src/: lib.rs  polymap_generator.rs
poly_bot_core/src/command/: add_member.rs  add_relationship.rs  add_user.rs  color.rs  command_response.rs  error.rs  help.rs  mod.rs
poly_bot_core/src/command/argument_parser/: discord_tag_argument_parser.rs  empty_argument_parser.rs  from_string_argument_parser.rs  mod.rs  or_argument_parser.rs  rest_argument_parser.rs  string_argument_parser.rs
poly_bot_core/src/dao/: mod.rs  relationships.rs  singleton.rs  users.rs
poly_bot_core/src/model/: color.rs  id_tree.rs  mod.rs  relationship.rs  user.rs
polymap_generator/: Cargo.toml
polymap_generator/src/: dot_definitions.rs  svg_renderer.rs
polymap_generator_dot_chromium_impl/: Cargo.toml
polymap_generator_dot_chromium_impl/src/: dot_definitions.rs  lib.rs
polymap_renderer/: Dockerfile  Gemfile  Rakefile
polymap_renderer/spec/: svg_renderer.rb
polymap_renderer/src/: main.rb  svg_renderer.rb
postgres_dao_impl/: Cargo.toml
postgres_dao_impl/migrations/: 1.sql
postgres_dao_impl/src/: lib.rs  relationships.rs  singleton.rs  users.rs
postgres_dao_impl/src/tests/: mod.rs  user.rs
scripts/: run.js  wasm_compile.js
src/: Command.ts  PluralKitApi.ts  PluralSystem.ts  PolyKitApi.ts  Relationship.ts  User.ts  commands.ts  config.rs  db.ts  global.d.ts  index.ts  main.rs  migration_constants.rs  polyMapGenerate.ts  secret.ts  test.ts  threadFunctions.ts  utilities.rs  utilities.ts
src/command/: add_member.rs  add_relationship.rs  add_user.rs  color.rs  command_response.rs  discord_tag_argument_parser.rs  empty_argument_parser.rs  from_string_argument_parser.rs  help.rs  mod.rs  rest_argument_parser.rs  string_argument_parser.rs
src/command/argument_parser/: discord_tag_argument_parser.rs  empty_argument_parser.rs  from_string_argument_parser.rs  mod.rs  or_argument_parser.rs  string_argument_parser.rs
src/dao/: mod.rs  relationships.rs  singleton.rs  users.rs
src/dao/postgres/: mod.rs  relationships.rs  singleton.rs  users.rs
src/model/: color.rs  gender.rs  id_tree.rs  mod.rs  relationship.rs  relationship_type.rs  user.rs
src/polymap_generator/: dot_definitions.rs  mod.rs  svg_renderer.rs
src/tests/: argument_parsing.rs  commands.rs  dao.rs  mod.rs  model.rs
src/utilities/: error.rs  mod.rs  shell.rs  std_additions.rs
tests/: CommandParser.test.ts  Commands.test.ts  OptionalArgumentList.test.ts  SinonStubbedInstance.ts  Users.test.ts  commands.test.ts  db.test.ts
tests/db/: relationships.test.ts  setup.test.notall.ts  setup.test.ts  users.test.ts
utilities/: Cargo.toml
utilities/src/: error.rs  lib.rs  std_additions.rs
wasmlib/: Cargo.toml
wasmlib/src/: lib.rs
