[package]
name = "poly-bot"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.6"
tokio = { version = "1.1", features = ["full"] }
once_cell = "1.5.2"
regex = "1.4.3"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.61"
tokio-postgres = { version = "0.7.0", features = ["runtime", "with-bit-vec-0_6"] }
async-trait = "0.1.42"
tokio-test = "0.4.0"
eyre = "0.6.5"
phf = { version = "0.8", features = ["macros"] }
macros = { path = "./macros" }
bit-vec = "0.6.3"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome.git" }
percent-encoding = "2.1.0"
dot = "0.1.4"
color-eyre = "0.5.10"
serenity = { version = "0.10.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
futures = "0.3.12"

[workspace]
members = ["macros"]
