[package]
name = "poly-bot"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = {path = "./macros"}
utilities = {path = "./utilities"}
config = {path = "./config"}
polymap_generator = {path = "./polymap_generator"}
poly_bot_core = {path = "./poly_bot_core"}
bot = {path = "./bot"}
postgres_dao_impl = {path = "./postgres_dao_impl"}


[workspace]
members = ["macros", "utilities", "config", "polymap_generator", "poly_bot_core", "bot", "postgres_dao_impl"]
