[package]
name = "macros"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
phf = { version = "0.8", features = ["macros"] }
syn = "1.0.6"
quote = "1.0.8"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.61"
phf_codegen = "0.8"
regex = "1.4.3"
Inflector = "0.11.4"
deunicode = "1.1.1"
base64 = "0.13.0"
