[package]
name = "model"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros" }
once_cell = "1.5.2"
regex = "1.4.3"
phf = { version = "0.8", features = ["macros"] }
