[package]
name = "poly_bot_core"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros" }
once_cell = "1.5.2"
regex = "1.4.3"
phf = { version = "0.8", features = ["macros"] }
eyre = "0.6.5"
color-eyre = "0.5.10"
async-trait = "0.1.42"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
utilities = { path = "../utilities" }
futures = "0.3.12"
