[package]
name = "polymap_generator"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome.git" }
once_cell = "1.5.2"
percent-encoding = "2.1.0"
macros = { path = "../macros" }
model = { path = "../model" }
utilities = { path = "../utilities" }
config = { path = "../config" }
