[package]
name = "postgres_dao_impl"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7.0", features = ["runtime", "with-bit-vec-0_6"] }
async-trait = "0.1.42"
tokio = { version = "1.2", features = ["full"] }
utilities = {path = "../utilities"}
poly_bot_core = {path = "../poly_bot_core" }
config = {path = "../config"}
once_cell = "1.5.2"
regex = "1.4.3"
include_dir = "0.6"
eyre = "0.6.5"
color-eyre = "0.5.10"
