[package]
name = "utilities"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
once_cell = "1.5.2"
tokio-postgres = { version = "0.7.0", features = ["runtime", "with-bit-vec-0_6"] }
